--- a/styles/variables.css
+++ b/styles/variables.css
@@ -8,7 +8,7 @@
   --blue: #007298;
   --orange: #dc4405;
   --teal: #3d6a6b;
-  --light-grey: #f2f2f2;
+  --light-grey: #e8e8e8;
   --white: #ffffff;
   --sofia: "sofia pro", "helvetica", "arial", "sans-serif";
   --proxima: "proxima nova", "open sans", "corbel", "arial", "sans-serif";
