--- a/styles/contact.css
+++ b/styles/contact.css
@@ -9,12 +9,14 @@ main {
 .margins {
   width: 85%;
   margin: 0 auto;
+  padding-top: 50px;
   background-color: white;
 }
 .main-wrapper {
-  width: 100%;
   background-color: var(--light-grey);
+  width: 100%;
   margin: 0 auto;
+  margin-top: 50px;
   padding-top: 10px;
   padding-bottom: 10px;
 }
@@ -25,13 +27,12 @@ h1 {
   text-transform: uppercase;
   background-color: var(--dark-purple);
   color: #fff;
-  margin: 25px 5% 25px 0;
+  margin: 0 auto;
   padding: 12px 32px;
   border-radius: 0 0 50px 0;
 }
 section.contact,
-section.faq,
-section.newsletter {
+section.faq {
   width: 90%;
   margin: 0 auto;
 }
@@ -39,14 +40,17 @@ section > p {
   font-family: var(--sofia);
   font-weight: bold;
 }
-
 .contact-form li {
   font-size: 1.125rem;
   padding: 8px;
-  list-style: square;
+  list-style: disc;
 }
 .main-form {
   width: 100%;
+  padding: 0;
+}
+#message-form {
+  margin-top: 2rem;
 }
 .form {
   display: inline-block;
@@ -54,9 +58,24 @@ section > p {
   font-size: 1.125rem;
   border-radius: 0;
   border: 3px solid #0030574d;
-  padding: 12px;
   transition-property: border;
   transition-duration: 0.5s;
+  outline: none;
+}
+.form:focus {
+  border-color: var(--magenta);
+}
+.form option,
+textarea {
+  font-family: var(--neue-haas);
+  font-size: 1.125rem;
+}
+.error-message {
+  margin-bottom: 8px;
+}
+#message {
+  height: 300px;
+  padding: 12px;
 }
 #email_2 {
   padding: 8px 12px;
@@ -94,6 +113,16 @@ button {
 button:hover {
   scale: 1.1;
 }
+#success {
+  text-align: center;
+  font-size: 1.125rem;
+  background-color: #034638bf;
+  border: 2px solid var(--dark-green);
+  border-radius: 5px;
+  color: white;
+  padding: 5px;
+  display: none;
+}
 h2 {
   font-family: var(--proxima);
   font-size: 1.25rem;
@@ -117,34 +146,31 @@ li > P {
 @media only screen and (min-width: 576px) {
   /* Main
 --------------------*/
-  .main-wrapper {
-    width: 90%;
-  }
+
   h1 {
     font-size: 1.875rem;
-    text-align: center;
-    border-radius: 0;
-    margin-right: 0;
-  }
-  section.contact {
-    width: 70%;
   }
 }
 @media only screen and (min-width: 768px) {
   /* Main
 --------------------*/
   h1 {
+    width: 70%;
     font-size: 2.25rem;
+  }
+  .main-wrapper {
+    width: 70%;
+  }
+  section.contact,
+  section.faq {
+    width: 85%;
   }
 }
 @media only screen and (min-width: 992px) {
   /* Main
 --------------------*/
   main {
-    background-color: var(--light-grey);
-  }
-  .main-wrapper {
-    width: 70%;
+    background-color: #d8d8d8;
   }
   .bottom-section {
     width: 85%;
@@ -154,14 +180,11 @@ li > P {
   /* main 
 --------------------*/
   .main-wrapper {
-    width: 50%;
+    width: 60%;
     padding-bottom: 50px;
   }
   h1 {
-    font-size: 2.5rem;
-  }
-  section.contact {
-    width: 70%;
+    width: 60%;
   }
   section > p {
     font-size: 1.25rem;
@@ -178,5 +201,18 @@ li > P {
   }
   li > p {
     font-size: 1.125rem;
+  }
+}
+
+@media only screen and (min-width: 1600px) {
+  h1 {
+    width: 50%;
+  }
+  .main-wrapper {
+    width: 50%;
+    padding-bottom: 50px;
+  }
+  section.contact {
+    width: 70%;
   }
 }
