--- a/styles/explore.css
+++ b/styles/explore.css
@@ -166,7 +166,7 @@ p.button:hover {
   /* Main
 --------------------*/
   main {
-    background-color: var(--light-grey);
+    background-color: #d8d8d8;
     font-size: 1.125rem;
   }
   .main-wrapper {
