--- a/styles/get_involved.css
+++ b/styles/get_involved.css
@@ -103,7 +103,7 @@ p.button:hover {
   /* Main
 --------------------*/
   main {
-    background-color: var(--light-grey);
+    background-color: #d8d8d8;
   }
   .main-wrapper {
     background-color: white;
