--- a/styles/home.css
+++ b/styles/home.css
@@ -230,7 +230,7 @@ div.ticketmaster {
   scale: 1.1;
 }
 .bubble a {
-  color: var(--dark-purple);
+  color: var(--dark-blue);
 }
 h3 {
   max-width: 200px;
@@ -418,8 +418,8 @@ figure.clubs {
   transition-duration: 0.5s;
   opacity: 1;
 }
-figure.clubs:hover {
-  opacity: 0.7;
+figure.clubs:last-child {
+  margin-top: 25px;
 }
 figure.clubs img {
   width: 100%;
@@ -429,6 +429,11 @@ figure.clubs img {
   border-bottom: 8px solid var(--dark-purple);
   border-radius: 15px;
   position: relative;
+  transition: all;
+  transition-duration: 0.5s;
+}
+figure.clubs img:hover {
+  opacity: 0.7;
 }
 figcaption.clubs {
   font-family: var(--proxima);
@@ -438,14 +443,6 @@ figcaption.clubs {
   font-weight: bold;
   margin-bottom: 24px;
   margin-top: 16px;
-}
-.clubs p {
-  font-size: 1.125rem;
-  margin: 0 0 0 16px;
-  background-color: var(--purple);
-  color: #fff;
-  padding: 12px;
-  border-radius: 50px 0 0 0;
 }
 h6 {
   font-size: 1rem;
@@ -592,9 +589,10 @@ h6 {
   div.image-wrapper {
     width: 600px;
   }
-  .clubs p {
-    font-size: 1.25rem;
-  }
+  figcaption.clubs {
+  font-size: 1.375rem;
+}
+
 }
 @media only screen and (min-width: 992px) {
   /* Header
@@ -624,7 +622,7 @@ h6 {
   /* Main
 --------------------*/
   main {
-    background-color: var(--light-grey);
+    background-color: #dbdbdb;
   }
   /* carousel */
   h5 {
@@ -738,6 +736,9 @@ h6 {
     flex-direction: row;
     gap: 64px;
   }
+  figure.clubs:last-child {
+  margin-top: 0;
+}
 }
 @media only screen and (min-width: 1200px) {
   /* Main
